<resources>


    <!-- CUSTOMIZE THESE FOR YOUR APP -->

    <string name="app_name">PocketMoodle</string>
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.amazon.mysampleapp</string>
    <!-- This can be anything, but it should be unique to the app. -->
    <string name="content_file_provider_authority">com.mysampleapp.fileprovider</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home Page</string>
    <string name="add_class">Add Class</string>
    <string name="remove_class">Remove Class</string>
    <string name="documents">Documents</string>
    <string name="click_to_upload_document">Click To Upload Document</string>
    <string name="class_to_remove">Choose the class you want to remove</string>
    <string name="default_status">Status: No Files Selected</string>
    <string name="upload_document">Upload Document</string>
    <string name="class_list">Class List</string>
    <string name="add_button_discussion">+</string>
    <string name="remove_button_discussion">-</string>
    <string name="hint_send_message">Type Message</string>
    <string name="send_message">Send</string>
    <string name="discussion_board">Discussion Board</string>
    <string name="open_discussion_board">Open Discussion Board</string>
    <string name="announcement">Announcement</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="grades">Grades</string>

    <!-- REQUIRED FOR GENERAL APP FUNCTIONALITY - YOU MAY WANT TO KEEP THESE -->

    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_or">or sign in with</string>
    <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_mfa">MFA Code</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="forgot_password_header">Forgot your password?</string>
    <string name="forgot_password_body">Set your new password with the verification code that was sent to you.</string>
    <string name="forgot_password_input_code_hint">Verification code</string>
    <string name="forgot_password_button_hint">Set password</string>
    <string name="mfa_header">MFA verification is required to authenticate.</string>
    <string name="mfa_code_sent_message">Code sent.</string>
    <string name="verify_button_text">Verify</string>
    <string name="username_text">Username</string>
    <string name="given_name_text">Given name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number (+15551234567)</string>
    <string name="sign_up_header">Enter the following information to sign up.</string>
    <string name="sign_up_confirm_code">Confirmation code</string>
    <string name="sign_up_confirm_text">Confirm</string>
    <string name="sign_up_confirm_code_sent">A confirmation code was sent.</string>
    <string name="sign_up_confirm_enter_code">Please enter the code below to confirm your account.</string>
    <string name="sign_up_confirm_title">Confirm your account</string>
    <string name="password_change_success">Password change succeeded.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="sign_up_success">Sign up succeeded.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="login_success">Login succeeded.</string>
    <string name="login_failed">Login failed.</string>
    <string name="sign_up_confirm_success">Sign up confirmation succeeded.</string>
    <string name="sign_up_confirm_failed">Sign up confirmation failed.</string>

    <!-- USED BY DEMO FEATURES ONLY - YOU CAN DISCARD THESE WITH THE DEMO FOLDER -->

    <string name="fragment_demo_instruction_overview_header">Overview</string>
    <string name="fragment_demo_instruction_description_header">Sample App Features</string>
    <string name="feature_sign_in_title">User Sign-in</string>
    <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
    <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
    <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
    <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
    <string name="feature_sign_in_demo_button">Demo User Identity</string>

    <string name="main_fragment_title_user_identity">User Identity</string>
    <string name="main_fragment_subtitle_user_identity">Keep track of users</string>
    <string name="identity_demo_text_view_description">Displays the user identity.</string>
    <string name="unknown_user">Guest User</string>
    <string name="user_id">USER IDENTIFIER</string>
    <string name="identity_demo_textview_username_description">User\'s name</string>
    <string name="identity_demo_textview_userid_description">User\'s unique identifier</string>
    <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
    <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
    <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
    <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="add_class_spinner">
        <item>None</item>
        <item>class1</item>
        <item>class2</item>
        <item>class3</item>
    </string-array>

    <!-- The following line is used to display the username in the header of the navigation bar -->
    <string name="username"> %s </string>
    <string name="user_email"> %s </string>

</resources>
