<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.PocketMoodle.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <include layout="@layout/navigation_action"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_container" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:id="@+id/navigation_menu"
        android:layout_gravity="start"
        app:itemTextColor="@color/menuText"
        app:headerLayout="@layout/navigation_header">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
